# worklog-mcp

./: .gitignore  AGENT_CLAUDE_ARCHITECTURE.md  README.md  TODO_WORK_PLAN.md  claude-code-sdk-python-spec.md  pyproject.toml
config/agent_templates/: claude_settings_template.json  default_config.yaml  mcp_config_template.json  personality_prompts.yaml
config/ai_agent_templates/: llm_settings_template.json  mcp_config_template.json
docs/: MCP_SSE_STDIO_TRANSPORT_SPEC.md
example-agent/: architect.json  designer.json  document-consistency-checker.json  frontend-engineer.json  general-worker.json  issue-investigator.json  manager.json  server-side-engineer.json  strategic-planner.json  system-requirements-analyst.json  test-engineer.json
examples/: CLAUDE_CODE_SETUP.md
scripts/: README.md  claude-mcp.sh  fix_agent_json.py  generate_agent_avatars.py  init_db.py  seed_dummy_data.py  start-agent-mcp.sh  start-all.sh  start-job-worker.sh  start-mcp.sh  start-web.sh  status-agent-mcp.sh  status.sh  stop-agent-mcp.sh  stop-all.sh  stop-job-worker.sh  stop-mcp.sh  stop-web.sh
src/worklog_agent_mcp/: __init__.py  __main__.py  server.py
src/worklog_agent_mcp/tools/: __init__.py  agent_management.py  (+1 more)
src/worklog_mcp/: __init__.py  __main__.py  avatar_generator.py  database.py  event_bus.py  job_queue.py  job_worker_daemon.py  logging_config.py  mcp_server.py  models.py  project_context.py  server.py  sse_server.py  tools.py  utils.py  web_server.py  web_ui.py
tests/: test_ai_agents.py  test_database.py  test_full_reset.py  test_models.py  test_project_context.py
(+19 files in other folders)
