[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worklog-mcp"
version = "0.1.0"
description = "分報管理のためのMCPサーバー"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.9.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "aiofiles>=23.0.0",
    "PyYAML>=6.0.0",
]

[project.scripts]
worklog-mcp = "worklog_mcp.__main__:main"
worklog-mcp-server = "worklog_mcp.mcp_server:main"
worklog-agent-mcp = "worklog_agent_mcp.__main__:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]